zoipertoken support in account

--- a/i18n/de-DE.json
+++ b/i18n/de-DE.json
@@ -14,6 +14,7 @@
                         "urlPass": "URL-Passwort",
                         "provisionDomain": "Domainschutz",
                         "provisionPass": "Telefon Passwort",
+                        "zoiperToken": "Zoiper Token",
                         "supportProvision": "Automatische Gerätekonfiguration ein",
                         "provisionEnabled": "Ist Eingeschaltet",
                         "provisionDisabled": "Ist Ausgeschaltet"
