--- a/i18n/en-US.json
+++ b/i18n/en-US.json
@@ -16,6 +16,7 @@
                         "urlPass": "URL-Password",
                         "provisionDomain": "Domainrestriction",
                         "provisionPass": "Phone Admin Password",
+                        "zoiperToken": "Zoiper Token",
                         "supportProvision": "Automatic Devicesetting on",
                         "provisionEnabled": "Is Enabled",
                         "provisionDisabled": "Is Disabled"
