--- a/i18n/ro-RO.json
+++ b/i18n/ro-RO.json
@@ -211,5 +211,26 @@
 	"standard": "standard",
         "sentEmailPopup": "An email has been sent to {{email}} with the login information.",
         "disabledAddCreditTooltip": "Braintree is required to add credit. Please contact your administrator for more information.",
-	"account_has_descendants": "You need to delete subaccounts before deleting this account"
+        "deleteAccountConfirmVar": "This account (\"{{accountName}}\") will be permanently deleted. Continue?",
+        "deleteAccountDialog": {
+                "title": "Confirmation of Account Deletion",
+                "cancel": "Cancel",
+                "deleteAccount": "Delete Account",
+                "deleteKey": "DELETE",
+                "deleteMessageIntro": "Do you really want to delete this account (\"{{variable}}\")?",
+                "deleteMessageExplanation": "Please type the word \"{{variable}}\" in the following input and then click on the Delete button to proceed"
+        },
+        "updateCreditDialog": {
+                "title": "Update Credits Amount",
+                "creditBalance": "Available Credit Balance",
+                "addCredit": "Add",
+                "removeCredit": "Remove",
+                "addCreditOne": "Add Credit One Time",
+                "removeCreditOne": "Remove Credit One Time",
+                "helpAddCreditOne": "By using this, you will add some credits to the balance of this account, which will allow it enable features such as e911 or Caller-ID, but also to place per-minute calls.",
+                "helpRemoveCreditOne": "We let you remove credits from your sub-accounts with this feature. If you added too many credits to an account, you could fix it by removing the extra creditshere for example.",
+                "placeholderAmount": "10.00",
+                "successfulUpdate": "Congratulations, you successfuly updated the amount of credits available on that account! :)"
+        },
+        "account_has_descendants": "You need to delete subaccounts before deleting this account"
 }
