--- a/i18n/it-IT.json
+++ b/i18n/it-IT.json
@@ -21,7 +21,15 @@
                         "provisionEnabled": "Is Enabled",
                         "provisionDisabled": "Is Disabled",
                         "supportCreatenew": "User Devicesetting on"
-                }
+                },
+                "dialplan": {
+                        "title": "Accout-Dialplan",
+                        "descript": "Own Account-Dialplan",
+                        "enabled": "Own Account-Dialplan",
+                        "disabled": "None"
+                },
+                "is_reseller": "Is Reseller",
+                "is_business": "Is Businesscustomer"
         },
         "servicePlanDetails": {
                 "rate": "tariffe",
